[package]
name = "esper"
version = "0.1.0"
authors = ["Michael Coyne <mikeycgto@gmail.com>"]

[dependencies]
hyper = { git = "https://github.com/hyperium/hyper.git", rev = "e23689122a1d2525574d144fa79ae48fccfdb964" }
url = { version = "1.1.1" }
uuid = { version = "0.2", features = ["v4"] }
docopt = { version = "0.7" }
rustc-serialize = { version = "0.3" }
log = { version = "0.3" }
env_logger = { version = "0.3" }
jsonwebtoken = { version = "1" }
time = { version = "0.1" }
